fixed horizontal scrolling issues on mobile

--- a/src/assets/css/home.css
+++ b/src/assets/css/home.css
@@ -98,7 +98,7 @@ body {
   color: #817676;
   font-family: "Barlow", sans-serif;
   font-size: 16px;
-  overflow-x: hidden;
+  margin: 0px;
 }
 
 h1,
@@ -141,9 +141,14 @@ h3 {
 }
 
 .section {
+  width: 100vw;
+  max-width: 100%;
+  padding: 0px;
+  margin: 0px;
   min-height: 100vh;
   max-height: fit-content;
   position: relative;
+  overflow-x: hidden;
 }
 
 .link-list {
