--- a/src/assets/scss/Carousel.scss
+++ b/src/assets/scss/Carousel.scss
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 75%;
+  width: 90%;
   position: relative;
 
   .item-container {
@@ -66,10 +66,32 @@
   .button {
     z-index: 2;
     transition: 0.3s;
+    position: absolute;
+    opacity: 0.75;
 
     &:hover {
       cursor: pointer;
       transform: scale(1.1);
+    }
+
+    &__left {
+      left: 0px;
+    }
+
+    &__right {
+      right: 0px;
+    }
+  }
+}
+
+@media only screen and (max-width: 1200px) {
+  .button {
+    width: 32px;
+  }
+
+  .carousel {
+    p {
+      font-size: 12px;
     }
   }
 }
