--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -20,7 +20,7 @@ body {
   color: $tertiary-color;
   font-family: $font-stack;
   font-size: 16px;
-  overflow-x: hidden;
+  margin: 0px;
 }
 
 h1,
@@ -67,9 +67,14 @@ h3 {
 
 .section {
   @extend %flex;
+  width: 100vw;
+  max-width: 100%;
+  padding: 0px;
+  margin: 0px;
   min-height: 100vh;
   max-height: fit-content;
   position: relative;
+  overflow-x: hidden;
 }
 
 .container {
